kustomize-guestbook/guestbook-ui-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: guestbook-ui
spec:
  replicas: 10
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: guestbook-ui
  strategy:
    canary:
      analysis:
        templateName: success-rate
        args:
        - name: ingress
          value: guestbook-ui
      canaryService: guestbook-ui-preview
      steps:
      - setWeight: 40
      - pause:
          duration: 120
      - setWeight: 60
      - pause:
          duration: 10
      - setWeight: 80
      - pause:
          duration: 10
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
      - image: gcr.io/heptio-images/ks-guestbook-demo:0.1
        name: guestbook-ui
        ports:
        - containerPort: 80
