kustomize-guestbook/guestbook-ui-svc.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: guestbook-ui-ingress
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: guestbook-ui.cluster2.local
    http:
      paths:
      - path: /
        backend:
          serviceName: guestbook-ui
          servicePort: 80
  tls:
  - hosts:
    - guestbook-ui.cluster2.local
